# Inquiro

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  Makefile  OPTIMAL_CONFIG.md  QUICKSTART.md  README.md  RESTRUCTURE_PLAN.md  TUI_README.md  __init__.py  config.py  get_embedding.py  inquiro_cli.py  inquiro_tui.py  populate_database.py  pyproject.toml  query_data.py  requirements-dev.txt  requirements.txt  research_assistant.py  setup_local.py  setup_optimal.ps1  setup_optimal.py  techstack.md  test_rag.py  textual_app.py  update_dependencies.py
core/: __init__.py  config.py  get_embedding.py  populate_database.py  query_data.py
docs/: IMPROVEMENTS.md  techstack.md
examples/: rag_demo.ipynb
inquiro/: __init__.py
src/inquiro/: cli.py  tui.py
src/inquiro/core/: __init__.py  config.py  database.py  embedding.py  get_embedding.py  populate_database.py  query.py  query_data.py
tests/: __init__.py  test_rag.py
ui/: __init__.py  inquiro_tui.py  setup_local.py
